# sigma-reputation-graph

./: .gitignore  Cargo.toml  README.md  install_python_lib.sh  playground.py  py  web
.github/workflows/: CI.yml
src/: lib.rs  proof.rs  test.rs  tests.rs
src/database/: generate.rs  global.rs  load.rs  mod.rs  spend.rs
src/ergo/: box_vector.rs  contract.rs  decoder.rs  endpoints.rs  fetch.rs  mod.rs  pull.rs  secrets.rs  submit.rs  utils.rs
src/ergo/explorer/: error.rs  explorer_api.rs  mod.rs  utils.rs
src/ergo/submit/: mod.rs  prover.rs  submit.rs
src/proof/: mod.rs  pointer_box.rs  reputation_proof.rs
src/tests/: compute.rs  mod.rs  surreal.rs
tests/: compute.rs  surreal.rs
