[package]
name = "reputation-graph"
version = "0.0.0"
edition = "2021"

[[test]]
name = "integration-tests"
path = "tests/*.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "reputation_graph"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.20.0", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = { version = "1.9", features = ["macros", "rt-multi-thread"] }
rand = "0.8.5"
assert_approx_eq = "1.0"
surrealdb = { version = "1.0.0", features = ["kv-mem", "kv-rocksdb"] }
serde = { version = "1.0.193", features = ["derive"] }
futures = "0.3.29"
openssl = { version = "0.10", features = ["vendored"] }
