[package]
name = "sigma-reputation-graph"
version = "0.0.0"
edition = "2021"

# Define optional features
[features]
# Default features
default = ["pyo3-bindings"]
# Features for PyO3 compilation
pyo3-bindings = [
    "pyo3",
    "pyo3-asyncio",
    "tokio",
    "rand",
    "assert_approx_eq",
    "surrealdb",
    "serde",
    "futures",
    "openssl"
]
# Features for WASM compilation
wasm-bindings = ["serde"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"], optional = true }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"], optional = true }
tokio = { version = "1.9", features = ["macros", "rt-multi-thread"], optional = true }
rand = { version = "0.8.5", optional = true }
assert_approx_eq = { version = "1.0", optional = true }
surrealdb = { version = "1.0.0", features = [], optional = true }
serde = { version = "1.0.193", features = ["derive"], optional = true }
serde_json = "1.0"
thiserror = "1.0.20"
reqwest = { version = "0.12.3", features = ["json", "blocking"] }
url = { version = "2.2", features = ["serde"] }
futures = { version = "0.3.29", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }
ergo-lib = { git = "https://github.com/ergoplatform/sigma-rust.git", version = "0.26.0", branch = "master", package = "ergo-lib", features = ["compiler"]}
hex = "0.4.3"
anyhow = "1.0.32"
log = "0.4.11"
once_cell = "1.15.0"
sha2 = "0.10"
base16 = "0.2.1"
base64 = "0.22"

# Specify WASM dependencies
[dependencies.wasm-bindgen]
version = "0.2"
optional = true

# Specify configuration for when compiling as a Python extension with PyO3
[lib]
name = "sigma_reputation_graph"
crate-type = ["cdylib"]

# Conditional compilation configuration
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Here you can add specific dependencies for the WASM platform

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.surrealdb]
features = ["kv-mem", "kv-rocksdb"]
